とりあえずいいかんじ?

--- a/assets/index.html
+++ b/assets/index.html
@@ -22,22 +22,50 @@
 </head>
 
 <body>
-  <div class="ui-parent">
-    <div class="ui-left">
-      <div class="ui-left-page">🏠</div>
-      <div class="ui-left-page">🔔</div>
-      <div class="ui-left-page">✉</div>
-      <div class="ui-left-page">👍</div>
-      <div class="ui-left-page">aaaa</div>
-    </div>
-    <div class="ui-main">
-      <div class="ui-main-header">
-        <div class="ui-main-header-tab select-tab">Global</div>
-        <div class="ui-main-header-tab">Local</div>
-        <div class="ui-main-header-tab">Follow</div>
+  <div class="flame">
+    <div class="left">
+      <div class="head">
+        Action
+      </div>
+      <div class="left-content content-box">
+        <span>🏠</span>
+        <span>Home</span>
+      </div>
+      <div class="left-content content-box">
+        <span>🔔</span>
+        <span>Notice</span>
+      </div>
+      <div class="left-content content-box">
+        <span>👪</span>
+        <span>Profile</span>
+      </div>
+      <div class="left-content-in content-box">
+        <div class="left-content">
+          <span>🔍</span>
+          <span>Search</span>
+        </div>
+        <input type="text" class="search-box"></span>
+      </div>
+      <div class="left-content-in content-box">
+        <div class="left-content">
+          <span>📓</span>
+          <span>Note</span>
+        </div>
+        <form>
+          <textarea type="text" class="note-box" name="text"></textarea></span>
+          <div class="left-content">
+            <input type="file" accept="image/*,video/*" name="attachment" style="display: none;">
+            <input type="button" value="画像/動画">
+            <imput type="submit" value="送信">
+          </div>
+        </form>
       </div>
     </div>
-    <div class="ui-right">aaa</div>
+    <div class="right">
+      <div class="head">
+        TimeLine
+      </div>
+    </div>
   </div>
 </body>
 
