みばえよく

--- a/assets/index.html
+++ b/assets/index.html
@@ -59,6 +59,7 @@
     if (path == "") {
       header.innerText = "TimeLine"
       content.innerHTML = "<h1>なんもないよ</h1>"
+      return
     }
 
     header.innerText = "Profile"
