なんとなく

--- a/assets/index.html
+++ b/assets/index.html
@@ -70,7 +70,7 @@
     })
       .then((r) => { return r.json() })
       .catch((e) => {
-        content.innerHTML = "<h1>このサーバーには存在しません</h1>"
+        content.innerHTML = "<h1>このサーバーには存在しないユーザーです</h1>"
       })
     console.log(person)
   })
